kubernetes/apps/flux-system/flux-instance/app/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "flux-webhook.blarc.my.id"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
